<resources>
    <string name="app_name">Food Delivery App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_fill_all_the_details_and_continue">Please,Fill all the details and Continue</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="pin_code">Pin Code</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_main_login">MainLogin</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="customer">Customer</string>
    <string name="admin">Admin</string>
    <string name="e_mail">E-mail</string>
    <string name="verify">Verify</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="full_name">Full Name</string>
    <string name="please_confirm_your_delivery_address">Please Confirm your Delivery Address</string>
    <string name="confirm">Confirm</string>
    <string name="home">Home</string>
    <string name="restaurant">Restaurant</string>
    <string name="add_a_restaurant">Add a Restaurant</string>
    <string name="delete_a_restaurant">Delete a Restaurant</string>
    <string name="enter_details_of_restaurant">Enter Details of restaurant</string>
    <string name="owner_name">Owner Name</string>
    <string name="restaurant_full_name">Restaurant Full Name</string>
    <string name="official_mobile_number">Official Mobile Number</string>
    <string name="restaurant_full_address">Restaurant Full Address</string>
    <string name="add_restaurant">Add Restaurant</string>
    <string name="restaurant_email">Restaurant Email</string>
    <string name="verify_restaurant_details">Verify Restaurant Details</string>
    <string name="edit">Edit</string>
    <string name="enter_restaurantId">Enter RestaurantId</string>
    <string name="enter_the_restaurantId">Enter the RestaurantId.</string>
    <string name="share_these_restaurant_credential_with_restaurant_admin">Share these Restaurant Credential with Restaurant Admin</string>
    <string name="generate">Generate</string>
    <string name="enter_secret_password_description">Enter Secret Password, which was provided at the time of registration</string>
    <string name="enter_secret_password">Enter Secret Password</string>
    <string name="login">LogIn</string>
    <string name="add_food_item">Add Food Item</string>
    <string name="remove_a_food_item">Remove a Food Item</string>
    <string name="food_items">Food Items</string>
    <string name="update_password">Update Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="new_password">New Password</string>
    <string name="enter_your_email_id">Enter Your Email ID</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email">Email</string>
    <string name="enter_the_mobile_number">Enter the Mobile Number</string>
    <string name="total_order_count">Total Order Count</string>
    <string name="send_verification_mail">Send Verification Mail</string>
    <string name="update">Update</string>
    <string name="food_item_added_to_menu">Food Item Added to Menu</string>
    <string name="incorrect_password">Incorrect Password</string>
    <string name="restaurant_id">Restaurant Id</string>
    <string name="enter_restaurant_id">Enter Restaurant Id</string>
    <string name="please_wait">Please Wait...</string>
    <string name="mark_as_delivered">Mark as Delivered</string>
    <string name="cancel_order">Cancel Order!</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure, You want to Delete this Food Item.</string>
    <string name="order_completed">Order Completed</string>
    <string name="food_delivered_successfully">Great! Enjoy Your Food</string>
    <string name="food_order_removed">Food Order Removed</string>
    <string name="error">Error!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="permanently_remove">Permanently Remove</string>
    <string name="permanently_remove_message">This will remove this order permanently.\nOnce the order is removed permanently it can\'t be restored.</string>
</resources>